@@ -49,6 +49,7 @@ import org.apache.nutch.service.resources.AdminResource;
 import org.apache.nutch.service.resources.ConfigResource;
 import org.apache.nutch.service.resources.DbResource;
 import org.apache.nutch.service.resources.JobResource;
+import org.apache.nutch.service.resources.SeedResource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -132,6 +133,7 @@ public class NutchServer {
     resources.add(ConfigResource.class);
     resources.add(DbResource.class);
     resources.add(AdminResource.class);
+    resources.add(SeedResource.class);
     return resources;
   }
 
